fix: padding of input and buttons were too low

--- a/src/pages/_app.scss
+++ b/src/pages/_app.scss
@@ -4,6 +4,11 @@
 * {
   color: inherit;
   text-decoration: inherit;
+  font-size: inherit;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-size: revert;
 }
 
 html {
@@ -28,7 +33,7 @@ body {
 button {
   background: white;
   border: 1px solid $border-color;
-  padding: 5px 30px;
+  padding: 10px 30px;
   border-radius: $border-radius;
   cursor: pointer;
 
@@ -44,7 +49,7 @@ button {
 input {
   background: white;
   border: 1px solid $border-color;
-  padding: 5px;
+  padding: 10px;
   border-radius: $border-radius;
 }
 
